[package]
name = "socket-test"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.99"
tracing = { version = "0.1.41" }
tracing-subscriber = "0.3"
tokio = { version = "1.47.1", features = ["full", "prelude"] }
futures = "0.3.31"
toml = "0.9.6"
tempfile = "3.23.0"
