[package]
name = "way-too-far"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.99"
tracing = { version = "0.1.41" }
tracing-subscriber = "0.3"
tokio = { version = "1.48", features = ["full"] }
futures = "0.3.31"
toml = "0.9.6"
tempfile = "3.23.0"
memmap2 = "0.9.9"
sendfd = { version = "0.4.4", features = ["tokio"] }
